Routing and route guards

--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -2,4 +2,12 @@
     <div class="panel-heading">
         {{ pageTitle + ': ' + product.productName }}
     </div>
+
+    <!--Html for showing the product goes here!-->
+
+    <div class='panel-footer'>
+        <a class="btn btn-default" (click)="onBack()" style="width:80px">
+            <i class="glyphicon glyphicon-chevron-left"></i> Back
+        </a>
+    </div>
 </div>
