--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -36,13 +36,17 @@
         <tbody>
           <tr *ngFor="let product of filteredProducts">
             <td>
-              <img *ngIf="showImage"
-                   [src]="product.imageUrl" 
-                   [title]="product.description" 
-                   [style.width.px]="imageWidth"
-                   [style.marking.px]="imageMargin" />
+                <img *ngIf="showImage"
+                [src]="product.imageUrl" 
+                [title]="product.description" 
+                [style.width.px]="imageWidth"
+                [style.marking.px]="imageMargin" />
             </td>
-            <td>{{ product.productName }}</td>
+              <td>
+                  <a [routerLink]="['/products', product.productId]">
+                      {{ product.productName }}
+                  </a>
+              </td>
             <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency:'USD':true:'1.2-2' }}</td>
