--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -3,8 +3,62 @@
         {{ pageTitle + ': ' + product.productName }}
     </div>
 
-    <!--Html for showing the product goes here!-->
-
+    <div class="panel-body">
+        <div class="col-sm-6">
+            <div class="row">
+                <div class="col-sm-3">
+                    <p>Name: </p>
+                </div>
+                <div class="col-sm-6">
+                    <p>{{ product.productName }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p>Code: </p>
+                </div>
+                <div class="col-sm-6">
+                    <p>{{ product.productCode | convertToSpaces: '-' }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p>Description: </p>
+                </div>
+                <div class="col-sm-6">
+                    <p>{{ product.description }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p>Availability: </p>
+                </div>
+                <div class="col-sm-6">
+                    <p>{{ product.releaseDate }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p>Price: </p>
+                </div>
+                <div class="col-sm-6">
+                    <p>{{ product.price | currency:'USD':true:'1.3-3' }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <p>5 Star Taring: </p>
+                </div>
+                <div class="col-sm-6">
+                    <pm-star [rating]='product.starRating'></pm-star>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <img [src]="product.imageUrl"
+                 [title]="product.description" />
+        </div>
+    </div>
     <div class='panel-footer'>
         <a class="btn btn-default" (click)="onBack()" style="width:80px">
             <i class="glyphicon glyphicon-chevron-left"></i> Back
